fxd critical bug caused by content overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@
 	top:350px;
 	overflow: hidden;
 	cursor: pointer;
+	background: red;
 }
 .slit.left {
 	left:0px;
@@ -214,7 +215,7 @@
 }
 
 #bg-title{ position: absolute; top: 350px; width: 100%; text-align: center; color: white; font-size:70px; font-family: osr;}
-#content{ overflow: hidden;}
+
 
 #footer{position: relative; 
 	height: 100px; 
